Overflow issue (#36)
* Fix overflow

* Merge pull request #32 from hack-duke/fix-overflow

--- a/src/App.css
+++ b/src/App.css
@@ -147,11 +147,13 @@
 
 .buoy {
   position: absolute;
-  max-height: 200%;
-  max-width: 200%;
+  max-height: 100%;
+  max-width: 100%;
+  scale: 200%;
   transform-origin: 75% 95%; /* 100px from left, 50px from top */
-  right: 2vw;
-  bottom: -8vw;
+  right: 15vw;
+  overflow: hidden;
+  bottom: -4vw;
   animation-delay: -0.5s;
   animation: tilt 5.45s infinite alternate ease-in-out; /* Animation name, duration, repeat, and easing */
 }
